[package]
name = "blarser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
futures = { version = "0.3.17", features = ["executor"] }
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["macros"] }
itertools = "0.10.1"
im = "15.0.0"