[package]
name = "blarser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
futures = { version = "0.3.17", features = ["executor"] }
serde_json = "1.0.68"
serde_repr = "0.1.7"
tokio = { version = "1.12.0", features = ["macros"] }
itertools = "0.10.1"
im = "15.0.0"
sled = "0.34.7"
bincode = "1.3.3"
thiserror = "1.0.30"
anyhow = "1.0.45"
indenter = "0.3.3"
log = "0.4.14"
env_logger = "0.9.0"
dialoguer = "0.9.0"
tap = "1.0.1"
rocket = "0.5.0-rc.1"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
tokio-stream = "0.1.8"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["postgres_pool"]