[package]
name = "blarser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
futures = { version = "0.3.17", features = ["executor"] }
serde_json = "1.0.68"
serde_repr = "0.1.7"
serde_with = "1.11.0"
tokio = { version = "1.12.0", features = ["macros", "sync"] }
itertools = "0.10.1"
im = "15.0.0"
sled = "0.34.7"
bincode = "1.3.3"
thiserror = "1.0.30"
anyhow = "1.0.45"
indenter = "0.3.3"
log = "0.4.14"
env_logger = "0.9.0"
dialoguer = "0.9.0"
tap = "1.0.1"
rocket = { version = "0.5.0-rc.1", features = ["uuid", "json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
tokio-stream = "0.1.8"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "uuidv07", "serde_json"] }
diesel-derive-enum = { version = "1.1.1", features = ["postgres"] }
uuid = { version = "0.8.2", features = ["serde"] }
async-recursion = "0.3.2"
nom = { version = "7.1.1", features = ["alloc"] }
nom-supreme = { version = "0.7.0", features = ["error"] }
owning_ref = "0.4.1"
partial_information = { path = "../partial_information" }
partial_information_derive = { path = "../partial_information_derive" }
text-diff = "0.4.0"
async-trait = "0.1.52"
byteorder = "1.4.3"
base64 = "0.13.0"
enum_dispatch = "0.3.8"


[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]
