[package]
name = "blarser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
futures = { version = "0.3.17", features = ["executor"] }
serde_json = "1.0.68"
serde_repr = "0.1.7"
serde_with = "1.11.0"
tokio = { version = "1.12.0", features = ["macros", "sync"] }
itertools = "0.10.1"
sled = "0.34.7"
bincode = "1.3.3"
thiserror = "1.0.30"
anyhow = "1.0.45"
indenter = "0.3.3"
log = "0.4.14"
env_logger = "0.9.0"
dialoguer = "0.9.0"
tap = "1.0.1"
# This commit adds diesel 2.0 support. Return to cargo when it's merged.
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "f0d678d", features = ["uuid", "json"] }
rocket_dyn_templates = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "f0d678d", features = ["handlebars"] }
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "f0d678d", default-features = false, features = ["diesel_postgres_pool"] }
tokio-stream = "0.1.8"
diesel = { version = "2.0.2", features = ["postgres", "chrono", "uuid", "serde_json"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
async-recursion = "0.3.2"
nom = { version = "7.1.1", features = ["alloc"] }
nom-supreme = { version = "0.7.0", features = ["error"] }
owning_ref = "0.4.1"
partial_information = { path = "../partial_information" }
partial_information_derive = { path = "../partial_information_derive" }
text-diff = "0.4.0"
async-trait = "0.1.52"
byteorder = "1.4.3"
base64 = "0.13.0"
multimap = "0.8.3"
fed = { git = "https://github.com/beiju/fed.git" }
trait_enum = "0.5.0"
uuid = { version = "1.2.2", features = ["serde"] }
serde_variant = "0.1.1"
strum = { version = "0.24", features = ["derive"] }
petgraph = "0.6"
as-any = "0.3.0"
daggy = { version = "0.8.0", features = ["serde-1", "stable_dag"] }
stream-kmerge = "0.2.0"
derive_more = "0.99.17"
csv = "1.1.6"
