[package]
name = "partial_information"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.68"
serde_repr = "0.1.7"
uuid = { version = "0.8.2", features = ["serde"] }
itertools = "0.10.3"